--- a/styles.css
+++ b/styles.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url(https://img.freepik.com/free-photo/dark-black-abstract-background-with-wood-chips_24972-208.jpg?w=740&t=st=1699025790~exp=1699026390~hmac=3d01a330be0b6ab30fed50f7f2ad45384cb5c633948722e13aec58e10ab376c2);
+  background-image: url(https://png.pngtree.com/thumb_back/fh260/background/20210403/pngtree-simple-white-flat-vectors-with-diagonal-cuts-decorative-backdrops-for-your-image_597614.jpg);
   color: white;
   font-family: Arial, Helvetica, sans-serif;
 }
